# AoC

./: .gitignore  CMakeLists.txt
2022/: CMakeLists.txt  StringTools.hpp  day03.cpp  day04.cpp  day06.cpp  day07.cpp  day09.cpp  day1.cpp  day10.cpp  day11.cpp  day2.cpp  day5.cpp  day6.cpp  day8.cpp
2024/: CMakeLists.txt
2024/Common/: CMakeLists.txt
2024/Common/Include/: Algo.hpp  Core.hpp  InputGetter.hpp  Stopwatch.hpp
2024/Common/Source/: InputGetter.cpp
2024/Day01/: CMakeLists.txt  Main.cpp
2024/Day02/: CMakeLists.txt  Main.cpp
2024/Day03/: CMakeLists.txt  Main.cpp
2024/Day04/: CMakeLists.txt  Main.cpp
2024/Day05/: CMakeLists.txt  Main.cpp
2024/Day06/: CMakeLists.txt  Main.cpp
2024/Day07/: CMakeLists.txt  Main.cpp
2024/Day08/: CMakeLists.txt  Main.cpp
2024/Day09/: CMakeLists.txt  Main.cpp
2024/Day10/: CMakeLists.txt  Main.cpp
2024/Day11/: CMakeLists.txt  Main.cpp
2024/Day12/: CMakeLists.txt  Main.cpp
2024/Day13/: CMakeLists.txt  Main.cpp
2024/Day14/: CMakeLists.txt  Main.cpp
2024/Day15/: CMakeLists.txt  Main.cpp
2024/Day16/: CMakeLists.txt  Main.cpp
2024/Day17/: CMakeLists.txt  Main.cpp
2024/Day18/: CMakeLists.txt  Main.cpp
2024/Day19/: CMakeLists.txt  Main.cpp
2024/Day20/: CMakeLists.txt  Main.cpp
2024/Day21/: CMakeLists.txt  Main.cpp
2024/Day22/: CMakeLists.txt  Main.cpp
2024/Day23/: CMakeLists.txt  Main.cpp
2024/Day24/: CMakeLists.txt  Main.cpp
2024/Day25/: CMakeLists.txt  Main.cpp
CMake/: cpr.cmake  ctre.cmake
