add_executable(Day1 "day01.cpp")
set_property(TARGET Day1 PROPERTY CXX_STANDARD 20)

add_executable(Day2 "day02.cpp")
set_property(TARGET Day2 PROPERTY CXX_STANDARD 20)

add_executable(Day3 "day03.cpp")
set_property(TARGET Day3 PROPERTY CXX_STANDARD 20)

add_executable(Day4 "day04.cpp")
set_property(TARGET Day4 PROPERTY CXX_STANDARD 20)

add_executable(Day5 "day05.cpp")
set_property(TARGET Day5 PROPERTY CXX_STANDARD 20)

add_executable(Day6 "day06.cpp")
set_property(TARGET Day6 PROPERTY CXX_STANDARD 20)

add_executable(Day7 "day07.cpp")
set_property(TARGET Day7 PROPERTY CXX_STANDARD 20)

add_executable(Day8 "day08.cpp")
set_property(TARGET Day8 PROPERTY CXX_STANDARD 20)

add_executable(Day9 "day09.cpp")
set_property(TARGET Day9 PROPERTY CXX_STANDARD 20)

