add_executable(Day01 "day01.cpp")
set_property(TARGET Day01 PROPERTY CXX_STANDARD 20)

add_executable(Day02 "day02.cpp")
set_property(TARGET Day02 PROPERTY CXX_STANDARD 20)

add_executable(Day03 "day03.cpp")
set_property(TARGET Day03 PROPERTY CXX_STANDARD 20)

add_executable(Day04 "day04.cpp")
set_property(TARGET Day04 PROPERTY CXX_STANDARD 20)

add_executable(Day05 "day05.cpp")
set_property(TARGET Day05 PROPERTY CXX_STANDARD 20)

add_executable(Day06 "day06.cpp")
set_property(TARGET Day06 PROPERTY CXX_STANDARD 20)

add_executable(Day07 "day07.cpp")
set_property(TARGET Day07 PROPERTY CXX_STANDARD 20)

add_executable(Day08 "day08.cpp")
set_property(TARGET Day08 PROPERTY CXX_STANDARD 20)

add_executable(Day09 "day09.cpp")
set_property(TARGET Day09 PROPERTY CXX_STANDARD 20)

add_executable(Day10 "day10.cpp")
set_property(TARGET Day10 PROPERTY CXX_STANDARD 20)

add_executable(Day11 "day11.cpp")
set_property(TARGET Day11 PROPERTY CXX_STANDARD 20)

