add_executable(2022D01 "day01.cpp")
target_compile_features(2022D01
    PRIVATE
    cxx_std_20
)

add_executable(2022D02 "day02.cpp")
target_compile_features(2022D02
    PRIVATE
    cxx_std_20
)

add_executable(2022D03 "day03.cpp")
target_compile_features(2022D03
    PRIVATE
    cxx_std_20
)

add_executable(2022D04 "day04.cpp")
target_compile_features(2022D04
    PRIVATE
    cxx_std_20
)

add_executable(2022D05 "day05.cpp")
target_compile_features(2022D05
    PRIVATE
    cxx_std_20
)

add_executable(2022D06 "day06.cpp")
target_compile_features(2022D06
    PRIVATE
    cxx_std_20
)

add_executable(2022D07 "day07.cpp")
target_compile_features(2022D07
    PRIVATE
    cxx_std_20
)

add_executable(2022D08 "day08.cpp")
target_compile_features(2022D08
    PRIVATE
    cxx_std_20
)

add_executable(2022D09 "day09.cpp")
target_compile_features(2022D09
    PRIVATE
    cxx_std_20
)

add_executable(2022D10 "day10.cpp")
target_compile_features(2022D10
    PRIVATE
    cxx_std_20
)

add_executable(2022D11 "day11.cpp")
target_compile_features(2022D11
    PRIVATE
    cxx_std_20
)
